Fixed team modal not scrolling issue on mobile.

--- a/components/TeamMemberSection.module.scss
+++ b/components/TeamMemberSection.module.scss
@@ -10,6 +10,7 @@
 	display: flex;
 	align-items: center;
 	z-index: 2;
+	overflow-y: scroll;
 }
 
 .photo {
@@ -47,6 +48,11 @@
 }
 
 @media screen and (max-width: 768px) {
+	.modal {
+		flex-direction: column;
+		padding: 4rem 0;
+	}
+
 	.photo {
 		grid-column: span 12;
 	}
